--- a/Marta.html
+++ b/Marta.html
@@ -73,7 +73,7 @@ ajuda
 <a href="https://sigarra.up.pt/feup/pt/vld_validacao.sair?p_address=FEST_GERAL.CURSOS_LIST?pv_num_unico=202205784" title="Terminar sessão Marta Ribeiro Seixas" class="terminar-sessao"><span class="sf-hidden">Terminar sessão</span></a>
 <a href="https://sigarra.up.pt/feup/pt/vld_entidades_geral.entidade_pagina?pct_id=2095091" title="Página de Marta Ribeiro Seixas" class="nome">Marta Ribeiro Seixas</a>
 <a href="https://sigarra.up.pt/feup/pt/vld_entidades_geral.entidade_pagina?pct_id=2095091" title="Fotografia de Marta Ribeiro Seixas" class="fotografia">
-<img src="./Joao_files/WhatsApp Image 2025-02-13 at 19.06.11.jpeg"></a>
+<img src="./Joao_files/WhatsApp Image 2025-02-13 at 19.06.11 (2).jpeg"></a>
 </div>
 </div><a href="file:///C:/Users/Diogo%20Sousa/Downloads/FEUP%20-%20Diogo%20S%C3%AAco%20da%20Rocha%20e%20Sousa%20(14_02_2025%2000%EF%BC%9A01%EF%BC%9A43).html#" data-element-to-toggle="#colunaextra" id="toggle-coluna-secundaria" aria-hidden="true">
  <div class="visibilidade-coluna-direita sf-hidden">
